# NthEngine

./: CMakeLists.txt  Doxyfile  README.md  THIRD_PARTY.md  _arena_allocator_8cpp_source.html  _arena_allocator_8hpp_source.html  _asset_8hpp.html  _asset_8hpp.js  _asset_8hpp_source.html  _asset_manager_8cpp.html  _asset_manager_8cpp_source.html  _asset_manager_8hpp.html  _asset_manager_8hpp_source.html  _astera_c_l_i_2main_8cpp.html  _astera_c_l_i_2main_8cpp.js  _astera_c_l_i_2main_8cpp_source.html  _astera_core_8hpp.html  _astera_core_8hpp_source.html  _audio_engine_8cpp.html  _audio_engine_8cpp_source.html  _audio_engine_8hpp.html  _audio_engine_8hpp.js  _audio_engine_8hpp_source.html  _behavior_8hpp.html  _behavior_8hpp.js  _behavior_8hpp_source.html  _binary_writer_8cpp.html  _binary_writer_8cpp_source.html  _binary_writer_8hpp.html  _binary_writer_8hpp.js  _binary_writer_8hpp_source.html  _buffer_8cpp.html  _buffer_8cpp_source.html  _buffer_8hpp.html  _buffer_8hpp.js  _buffer_8hpp_source.html  _camera_8cpp.html  _camera_8cpp_source.html  _camera_8hpp.html  _camera_8hpp.js  (+699 more)
.github/: CODEOWNERS
.github/workflows/: BuildLinux.yaml  BuildWindows.yaml
CMake/: BuildLuaJIT.cmake  FetchDeps.cmake  GenerateDocs.cmake  NthEngineConfig.cmake.in
Content/Scenes/: Sandbox.xml
Content/Scripts/: BallController.lua
Demos/SpaceInvaders/: SpaceInvaders.astera
Demos/SpaceInvaders/Content/: .emmyrc.json
Demos/SpaceInvaders/Content/Audio/: shoot.wav.asset
Demos/SpaceInvaders/Content/Scenes/: Level_1.xml  Level_1.xml.asset
Demos/SpaceInvaders/Content/Scripts/: EnemyController.lua  EnemyController.lua.asset  PlayerController.lua  PlayerController.lua.asset
Demos/SpaceInvaders/Content/Sprites/: MSI Afterburner Best Performance HUD Overlay (How To Set It Up) - YouTube.html  alien.png.asset  bullet.png.asset  ship.png.asset
Demos/SpaceInvaders/Content/Sprites/MSI Afterburner Best Performance HUD Overlay (How To Set It Up) - YouTube_files/: rs=AGKMywGCAkkeunzJM8-_5_Jw6oNmwcBPkA.css
Demos/SpaceInvaders/Runtime/: CMakeLists.txt  main.cpp
Docs/Markdown/: MainPage.md
Docs/html/: _audio_engine_8cpp.html  _audio_engine_8cpp_source.html  _audio_engine_8hpp.html  _audio_engine_8hpp.js  _audio_engine_8hpp_source.html  _audio_player_8lua.html  _audio_player_8lua_source.html  _behavior_8hpp.html  _behavior_8hpp.js  _behavior_8hpp_source.html  _buffer_8cpp.html  _buffer_8cpp_source.html  _buffer_8hpp.html  _buffer_8hpp.js  _buffer_8hpp_source.html  _camera_8cpp.html  _camera_8cpp_source.html  _camera_8hpp.html  _camera_8hpp.js  _camera_8hpp_source.html  _clock_8cpp.html  _clock_8cpp_source.html  _clock_8hpp.html  _clock_8hpp.js  _clock_8hpp_source.html  _clock_8lua.html  _clock_8lua_source.html  _collider2_d_8cpp.html  _collider2_d_8cpp_source.html  _collider2_d_8hpp.html  _collider2_d_8hpp.js  _collider2_d_8hpp_source.html  _collision_detection_8hpp.html  _collision_detection_8hpp.js  _collision_detection_8hpp_source.html  _color_8cpp.html  _color_8cpp_source.html  _color_8hpp.html  _color_8hpp.js  _color_8hpp_source.html  (+434 more)
Docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  concepts_0.js  (+73 more)
EngineContent/Scripts/types/: Clock.lua  Coordinates.lua  Entity.lua  Game.lua  Input.lua  Log.lua  Math.lua  Transform.lua  Vec2.lua
Sandbox/: Sandbox.nthproj
Sandbox/Content/Scenes/: Sandbox.xml
Sandbox/Runtime/: CMakeLists.txt  main.cpp
Source/Common/: CommonPCH.hpp  IO.hpp  Macros.hpp
Source/Engine/: ArenaAllocator.cpp  ArenaAllocator.hpp  Asset.hpp  AssetManager.cpp  AssetManager.hpp  AudioEngine.cpp  AudioEngine.hpp  BinaryWriter.cpp  CMakeLists.txt  Color.cpp  Color.hpp  Command.hpp  CommandQueue.cpp  CommandQueue.hpp  Content.hpp  Coordinates.hpp  Coordinates.inl  EngineCommon.hpp  EnginePlugin.hpp  EnginePluginInterface.hpp  FrameAllocator.cpp  FrameAllocator.hpp  Game.cpp  Game.hpp  Input.cpp  Input.hpp  JobSystem.cpp  JobSystem.hpp  Log.cpp  Log.hpp  Math.cpp  Math.hpp  Memory.hpp  PluginManager.cpp  PluginManager.hpp  RenderContext.cpp  RenderContext.hpp  ResourceManager.inl  Scene.cpp  Scene.hpp  (+10 more)
Source/Engine/Components/: Behavior.hpp  Collider2D.cpp  Collider2D.hpp  Rigidbody2D.cpp  Rigidbody2D.hpp  SpriteRenderer.hpp
Source/Engine/Physics/: CollisionDetection.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp
Source/Engine/Rendering/: Command.hpp  CommandQueue.cpp  DebugInterface.cpp  DebugInterface.hpp  Geometry.cpp  Geometry.hpp  ImGuiDebugLayer.cpp  ImGuiDebugLayer.hpp  PhysicsDebugLayer.cpp  RenderContext.cpp  RenderContext.hpp  Shader.cpp  Shader.hpp
Source/Plugins/: CMakeLists.txt
Source/Plugins/SamplePlugin/: CMakeLists.txt  PluginExport.hpp  SamplePlugin.cpp  SamplePlugin.hpp  Screenshot.cpp  Screenshot.hpp
Source/Plugins/Screenshot/: CMakeLists.txt  PluginExport.hpp  Screenshot.cpp  Screenshot.hpp
Source/Sandbox/: main.cpp
Source/Sandbox/Content/: .emmyrc.json
Source/Sandbox/Content/Scripts/: BallController.lua
Source/Tools/: CMakeLists.txt
Source/Tools/AsteraCLI/: CMakeLists.txt  main.cpp
Source/Tools/NthCLI/: CMakeLists.txt  ProjectDescriptor.hpp  ProjectRunner.hpp  main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+102 more)
